Fixed TextEditor spacing and publish button

--- a/client/src/css/textEditor.css
+++ b/client/src/css/textEditor.css
@@ -5,7 +5,7 @@
 }
 
 .text-editor-menu {
-    padding: var(--mantine-spacing-sm);
+    padding: 8px var(--mantine-spacing-sm);
     border-bottom: 1px solid var(--mantine-color-gray-3);
     border-top-left-radius: var(--mantine-radius-md);
     border-top-right-radius: var(--mantine-radius-md);
@@ -19,6 +19,10 @@
 .tiptap {
     margin: var(--mantine-spacing-sm);
     outline: none;
+
+    p {
+      margin: 0.5em 0;  
+    }
 
     >*+* {
         margin-top: 0.75em;
